# C_MFTI

./: .gitignore  CMakeLists.txt  main.cpp  problem_cf.c  problem_de.c  problem_hwf.c  problem_mf.c
Seminar1/: problem_cf.c  problem_ee.c  problem_fm.c  problem_fs.c  problem_hwf.c  problem_ns.c  problem_pp.c  problem_rl.c  problem_rps.c  problem_sf.c
Seminar2/: problem_bi.c  problem_bp.c  problem_gf.c  problem_lm.c  problem_pe.c  problem_pn.c  problem_ps.c  problem_se.c  problem_tr.c
Seminar3/: problem_fy.c  problem_mm.c  problem_si.c  problem_sse.c
