cmake_minimum_required(VERSION 3.25)
project(C_MFTI)

SET(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -Wextra -Wpedantic)

add_executable(main main.cpp)
add_executable(problem_rl Seminar1/problem_rl.c)
add_executable(problem_cf Seminar1/problem_cf.c)
add_executable(problem_ee Seminar1/problem_ee.c)
add_executable(problem_de Seminar1/problem_de.c)
add_executable(problem_ns Seminar1/problem_ns.c)
add_executable(problem_fs Seminar1/problem_fs.c)
add_executable(problem_rps Seminar1/problem_rps.c)
add_executable(problem_fm Seminar1/problem_fm.c)
add_executable(problem_pp Seminar1/problem_pp.c)
add_executable(problem_sf Seminar1/problem_sf.c)
add_executable(problem_mf Seminar1/problem_mf.c)
add_executable(problem_hwf Seminar1/problem_hwf.c)

add_executable(2-01-problem_pn Seminar2/problem_pn.c)
add_executable(2-02-problem_se Seminar2/problem_se.c)
add_executable(2-03-problem_tr Seminar2/problem_tr.c)
add_executable(2-04-problem_ps Seminar2/problem_ps.c)
add_executable(2-05-problem_gf Seminar2/problem_gf.c)
add_executable(2-06-problem_lm Seminar2/problem_lm.c)

